fix header alignment

--- a/responsive.css
+++ b/responsive.css
@@ -22,7 +22,7 @@
 
 	.header__title {
 		font-size: 2.5em;
-		margin: .5em 0 .5em .5em;
+		margin: .5em 0 0 .5em;
 	}
 
 	.hamburger {
@@ -69,6 +69,7 @@
 
 	.header__title {
 		font-size: 2em;
+		margin: .7em 0 0 .5em;
 	}
 }
 
